reactivar boton subir layout

--- a/src/app/layouts/rightsidebar/rightsidebar.component.html
+++ b/src/app/layouts/rightsidebar/rightsidebar.component.html
@@ -1,4 +1,4 @@
-<button (click)="topFunction()" class="btn btn-danger btn-icon" id="back-to-top">
+<button (click)="topFunction()" class="btn btn-success btn-icon" id="back-to-top">
     <i class="ri-arrow-up-line"></i>
 </button>
 
