--- a/src/app/layouts/vertical/vertical.component.html
+++ b/src/app/layouts/vertical/vertical.component.html
@@ -5,7 +5,7 @@
     <app-sidebar></app-sidebar>
     <div class="main-content">
         <div class="page-content">
-            <div class="container-fluid">
+            <div class="container-fluid" (window:scroll)="windowScroll()">
                 <!-- Main Content -->
                 <router-outlet></router-outlet>
             </div>
