agregar modal homologacion

--- a/src/app/pages/dashboards/project-control/project-control.component.html
+++ b/src/app/pages/dashboards/project-control/project-control.component.html
@@ -81,7 +81,7 @@
                                                                         <div class="col-lg-2 col">
                                                                             <div class="row text-muted text-center">
                                                                                 <div class="col-12 border-end border-end-dashed">
-                                                                                    <h5 class="mb-1">02-08-2023</h5>
+                                                                                    <h5 class="mb-1">{{ v.updatedAt | date: 'd/M/yyyy' }}</h5>
                                                                                     <p class="text-muted mb-0">Última actualización</p>
                                                                                 </div>
                                                                             </div>
