--- a/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
@@ -51,7 +51,7 @@
                           
                                             <!--<ng-container *ngFor="let v of ig.instalaciones;">-->
         
-                                            <div class="team-list list-view-filter row" style="cursor:pointer;" (click)="goEvaluation()">
+                                            <div class="team-list list-view-filter row" style="cursor:pointer;">
                                                 <div class="col">
                                                     <div class="card team-box">
                                                         <div class="team-cover">
@@ -66,7 +66,7 @@
                                                                         </div>
                                                                     </div>
                                                                 </div>
-                                                                <div class="col-lg-3 col">
+                                                                <div class="col-lg-2 col" (click)="goEvaluation()">
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
                                                                             <h5 class="mb-1">{{ evaluations.createdAt | date: 'd/M/yyyy' }}</h5>
@@ -75,7 +75,7 @@
                                                                     </div>
                                                                 </div>
         
-                                                                <div class="col-lg-3 col">
+                                                                <div class="col-lg-2 col" (click)="goEvaluation()">
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
                                                                             <h5 class="mb-1">{{ evaluations.fechaFinalizacion ? (evaluations.fechaFinalizacion | date: 'd/M/yyyy') : '-' }}</h5>
@@ -84,7 +84,7 @@
                                                                     </div>
                                                                 </div>
                                                                 
-                                                                <div class="col-lg-3 col">
+                                                                <div class="col-lg-4 col" (click)="goEvaluation()">
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
                                                                             <h5 class="mb-1"style="color: #405189;"><b>{{evaluations.evaluador.nombre}}</b></h5>
@@ -93,15 +93,21 @@
                                                                     </div>
                                                                 </div>
 
-                                                                <div class="col-lg-2 col">
+                                                                <div class="col-lg-2 col" (click)="goEvaluation()">
                                                                     <div class="progress progress-xl">
                                                                         <div class="progress-bar" 
                                                                         [ngClass]="{'bg-danger': evaluations.cumplimiento > 0 && evaluations.cumplimiento < 25, 'bg-warning': evaluations.cumplimiento > 25 && evaluations.cumplimiento < 75, 'bg-success': evaluations.cumplimiento > 75 }" role="progressbar" [style]="evaluations.cumplimiento > 0 ? 'width:'+evaluations.cumplimiento+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{evaluations.cumplimiento}}%</div>
                                                                     </div>
                                                                 </div>
 
-                                                                <div class="col-lg-1 col">
+                                                                <div class="col-lg-1 col" (click)="goEvaluation()">
                                                                     <span class="badge" [ngClass]="{'text-bg-success': evaluations.fechaFinalizacion, 'text-bg-warning': !evaluations.fechaFinalizacion}">{{evaluations.fechaFinalizacion ? 'Finalizada' : 'En proceso'}}</span>
+                                                                </div>
+                                                                <div class="col-lg-1 col text-center">
+                                                                    <span 
+                                                                    [style.cursor]="'pointer'" (click)="homologar(homoContent, evaluations.id)">
+                                                                    <i class="ri-git-merge-fill"></i>
+                                                                    </span>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -125,3 +131,51 @@
     </div><!-- end col -->
 
 </div><!-- end row -->
+
+<ng-template #homoContent let-modal>
+    <div class="modal-content">
+      <div class="modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="btn-close" (click)="modal.dismiss('Cross click')"></button>
+      </div>
+      <div class="modal-body text-center">
+        <lord-icon src="https://cdn.lordicon.com/tdrtiskw.json" trigger="loop" colors="primary:#f06548,secondary:#f7b84b" style="width:120px;height:120px"></lord-icon>
+        <div class="mt-4 pt-2 fs-15 ">
+            <h4>¿Está segur@ que desea realizar la homologación?</h4>
+            <p class="text-muted mx-4 mb-0">Esta acción no se puede deshacer</p>
+        </div>
+        <div class="d-flex align-items-start gap-2 mt-4 mb-2"><!--justify-content-center-->
+                <button type="button" class="swal2-cancel btn btn-danger w-xs mb-1 previestab" aria-label="" style="display: inline-block;" (click)="modal.close('Close click')">Cancelar</button>
+                <button type="button" class="swal2-cancel btn btn-primary w-xs mb-1 right ms-auto nexttab" aria-label="" style="display: inline-block;" (click)="saveHomologar(homoProgressContent, homoSuccessContent)">Homologar</button>
+        </div>
+      </div>
+    </div>
+</ng-template>
+
+<ng-template #homoProgressContent let-modal>
+    <div class="modal-content">
+      <div class="modal-body text-center">
+        <lord-icon src="https://cdn.lordicon.com/tdrtiskw.json" trigger="loop" colors="primary:#f06548,secondary:#f7b84b" style="width:120px;height:120px"></lord-icon>
+        <div class="mt-4 pt-2 fs-15 ">
+            <h4>Realizando homologación del elemento...</h4>
+            <p class="text-muted mx-4 mb-0">Podras ver los cambios en la siguiente etapa de Seguimiento y Control</p>
+        </div>
+      </div>
+    </div>
+</ng-template>
+
+<ng-template #homoSuccessContent let-modal>
+    <div class="modal-content">
+      <div class="modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="btn-close" (click)="modal.dismiss('Cross click')"></button>
+      </div>
+      <div class="modal-body text-center">
+        <lord-icon src="https://cdn.lordicon.com/lupuorrc.json" trigger="loop" colors="primary:#0ab39c,secondary:#405189" style="width:120px;height:120px"></lord-icon>
+        <div class="mt-4 pt-2 fs-15">
+            <h4>Homologación Completa!</h4>
+        </div>
+        <div class="d-flex gap-2 justify-content-center mt-4 mb-2">
+            <button type="button" class="swal2-cancel btn btn-primary w-xs mb-1" aria-label="" style="display: inline-block;" (click)="modal.close('Close click')">Salir</button>
+        </div>
+      </div>
+    </div>
+</ng-template>
