--- a/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-lg-12">
 
-                    <div class="row g-4 mb-3">
+                    <div class="row g-4 mb-3" *ngIf="validateRol(1) || validateRol(2)">
                         <div class="col-lg-12">
                                 <div class="row g-4 mb-3">
                                     <div class="col-sm">
