--- a/src/app/pages/dashboards/project-dashboard/project-evaluations/project-evaluations.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-evaluations/project-evaluations.component.html
@@ -17,7 +17,7 @@
                                 <div class="col-sm-auto">
                                     
                                     <button type="button" style="
-                                    width: 200px;" class="btn btn-light waves-effect waves-light" routerLink="/{{project_id}}/project-dashboard"><!--<i class="ri-arrow-right-line label-icon align-middle fs-16"></i> -->Salir</button>
+                                    width: 200px;margin-right: 10px;" class="btn btn-light waves-effect waves-light" routerLink="/{{project_id}}/project-dashboard"><!--<i class="ri-arrow-right-line label-icon align-middle fs-16"></i> -->Salir</button>
 
                                     <button type="button" class="btn btn-primary btn-label right waves-effect waves-light" (click)="goDashboard()"><i class="ri-arrow-right-line label-icon align-middle fs-16"></i> Dashboard</button>
 
