ajuste buscador con titulo no existente, boton top, y quitar gestionar de grafica criticidad

--- a/src/assets/scss/components/_helper.scss
+++ b/src/assets/scss/components/_helper.scss
@@ -317,7 +317,7 @@ code {
 
 #back-to-top {
     position: fixed;
-    bottom: 100px;
+    bottom: 20px;//100px;
     right: 28px;
     transition: all 0.5s ease;
     //display: none;
