--- a/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
@@ -32,20 +32,21 @@
                         </div>
                         <div class="col-sm-auto">
                             <div>
-                                <button type="button" class="btn btn-success waves-effect waves-light" (click)="createEvaluation()" [disabled]="evaluations"><i class="ri-add-line label-icon align-middle fs-16"><!--ms-2--></i></button>
+                                <button type="button" class="btn btn-success waves-effect waves-light" (click)="createEvaluation()"><i class="ri-add-line label-icon align-middle fs-16"><!--ms-2--></i></button><!--[disabled]="evaluations"-->
                             </div>
                         </div>
                     </div>
                     <!--<div class="card">
                         <div class="card-body">-->
         
-                            <div *ngIf="!evaluations || !showData" style="min-height: 400px !important;">
+                            <div *ngIf="!evaluations || evaluations.length < 1 || !showData" style="min-height: 400px !important;">
                                 <div style="text-align: center;width: 100%;font-size: 20px;" class="position-absolute top-50">
                                     Aún no tiene Evaluaciones
                                 </div>
                             </div>
         
-                            <div *ngIf="evaluations && showData" style="min-height: 450px !important;">            
+                            <div *ngIf="evaluations && evaluations.length > 0 && showData" style="min-height: 450px !important;">
+                                <ng-container *ngFor="let ev of evaluations">
                                     <div class="list-group">
                                         <!--<ng-container *ngFor="let ig of installations_group | filter:term2">-->
                           
@@ -66,46 +67,46 @@
                                                                         </div>
                                                                     </div>
                                                                 </div>
-                                                                <div class="col-lg-2 col" (click)="goEvaluation()">
+                                                                <div class="col-lg-2 col" (click)="goEvaluation(ev.id)">
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
-                                                                            <h5 class="mb-1">{{ evaluations.createdAt | date: 'd/M/yyyy' }}</h5>
+                                                                            <h5 class="mb-1">{{ ev.createdAt | date: 'd/M/yyyy' }}</h5>
                                                                             <p class="text-muted mb-0">Inicio</p>
                                                                         </div>
                                                                     </div>
                                                                 </div>
         
-                                                                <div class="col-lg-2 col" (click)="goEvaluation()">
+                                                                <div class="col-lg-2 col" (click)="goEvaluation(ev.id)">
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
-                                                                            <h5 class="mb-1">{{ evaluations.fechaFinalizacion ? (evaluations.fechaFinalizacion | date: 'd/M/yyyy') : '-' }}</h5>
+                                                                            <h5 class="mb-1">{{ ev.fechaFinalizacion ? (ev.fechaFinalizacion | date: 'd/M/yyyy') : '-' }}</h5>
                                                                             <p class="text-muted mb-0">Término</p>
                                                                         </div>
                                                                     </div>
                                                                 </div>
                                                                 
-                                                                <div class="col-lg-4 col" (click)="goEvaluation()">
+                                                                <div class="col-lg-4 col" (click)="goEvaluation(ev.id)">
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
-                                                                            <h5 class="mb-1"style="color: #405189;"><b>{{evaluations.evaluador.nombre}}</b></h5>
+                                                                            <h5 class="mb-1"style="color: #405189;"><b>{{ev.evaluador.nombre}}</b></h5>
                                                                             <p class="text-muted mb-0">Responsable</p>
                                                                         </div>
                                                                     </div>
                                                                 </div>
 
-                                                                <div class="col-lg-2 col" (click)="goEvaluation()">
+                                                                <div class="col-lg-2 col" (click)="goEvaluation(ev.id)">
                                                                     <div class="progress progress-xl">
                                                                         <div class="progress-bar" 
-                                                                        [ngClass]="{'bg-danger': evaluations.cumplimiento > 0 && evaluations.cumplimiento < 25, 'bg-warning': evaluations.cumplimiento > 25 && evaluations.cumplimiento < 75, 'bg-success': evaluations.cumplimiento > 75 }" role="progressbar" [style]="evaluations.cumplimiento > 0 ? 'width:'+evaluations.cumplimiento+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{evaluations.cumplimiento}}%</div>
+                                                                        [ngClass]="{'bg-danger': ev.cumplimiento > 0 && ev.cumplimiento < 25, 'bg-warning': ev.cumplimiento > 25 && ev.cumplimiento < 75, 'bg-success': ev.cumplimiento > 75 }" role="progressbar" [style]="ev.cumplimiento > 0 ? 'width:'+ev.cumplimiento+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ev.cumplimiento}}%</div>
                                                                     </div>
                                                                 </div>
 
-                                                                <div class="col-lg-1 col" (click)="goEvaluation()">
-                                                                    <span class="badge" [ngClass]="{'text-bg-success': evaluations.fechaFinalizacion, 'text-bg-warning': !evaluations.fechaFinalizacion}">{{evaluations.fechaFinalizacion ? 'Finalizada' : 'En proceso'}}</span>
+                                                                <div class="col-lg-1 col" (click)="goEvaluation(ev.id)">
+                                                                    <span class="badge" [ngClass]="{'text-bg-success': ev.fechaFinalizacion, 'text-bg-warning': !ev.fechaFinalizacion}">{{ev.fechaFinalizacion ? 'Finalizada' : 'En proceso'}}</span>
                                                                 </div>
                                                                 <div class="col-lg-1 col text-center">
-                                                                    <span 
-                                                                    [style.cursor]="'pointer'" (click)="homologar(homoContent, evaluations.id)">
+                                                                    <span [ngClass]="ev.active ? 'text-success' : ''" 
+                                                                    [style.cursor]="'pointer'" (click)="homologar(homoContent, ev)">
                                                                     <i class="ri-git-merge-fill"></i>
                                                                     </span>
                                                                 </div>
@@ -118,6 +119,7 @@
                                             <!--</ng-container>
                                         </ng-container>-->
                                     </div>
+                                </ng-container>
                                 </div>
                             <!--</div>
                     </div>-->
