--- a/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
+++ b/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
@@ -162,22 +162,22 @@
                                                         <div class="col-lg-3 col" (click)="goEvaluation(s.id, s.evaluations)" *ngIf="s.proyectoId == project_id">
                                                             <div class="row text-muted text-center">
                                                                 <div class="col-6 border-end border-end-dashed">
-                                                                    <h5 class="mb-1">{{s.evaluations.fecha_evaluacion ? (s.evaluations.fecha_evaluacion | date:"dd-MM-yy" ) : '-' }}</h5>
+                                                                    <h5 class="mb-1">{{s.evaluations.evaluationProyectId == idEvaluation && s.evaluations.fecha_evaluacion ? (s.evaluations.fecha_evaluacion | date:"dd-MM-yy" ) : '-' }}</h5>
                                                                     <p class="text-muted mb-0">Fecha evaluación</p>
                                                                 </div>
                                                                 <div class="col-6">
-                                                                    <h5 class="mb-1">{{s.evaluations && s.evaluations.findings ? s.evaluations.findings.length : 0}}</h5>
-                                                                    <p class="text-muted mb-0">{{s.evaluations && s.evaluations.findings ? (s.evaluations.findings.length == 1 ? 'Hallazgo' : 'Hallazgos') : 'Hallazgos'}}</p>
+                                                                    <h5 class="mb-1">{{s.evaluations && s.evaluations.evaluationProyectId == idEvaluation  && s.evaluations.findings ? getFindings(s.evaluations.findings).length : 0}}</h5>
+                                                                    <p class="text-muted mb-0">{{s.evaluations && s.evaluations.evaluationProyectId == idEvaluation && s.evaluations.findings ? (getFindings(s.evaluations.findings).length == 1 ? 'Hallazgo' : 'Hallazgos') : 'Hallazgos'}}</p>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-2 col text-center" (click)="goEvaluation(s.id, s.evaluations)" *ngIf="s.proyectoId == project_id">
                                                             <span class="badge" [ngClass]="{
-                                                                'text-bg-no-evaluado': !s.evaluations.estado,'text-bg-danger': (s.evaluations.estado && getCategoryStatus(s.evaluations.estado) == 'NO CUMPLE'), 'text-bg-success': s.evaluations.estado && getCategoryStatus(s.evaluations.estado) == 'CUMPLE', 'text-bg-warning': s.evaluations.estado && getCategoryStatus(s.evaluations.estado) == 'CUMPLE PARCIALMENTE'}">{{s.evaluations.estado ? s.evaluations.estado : 'NO EVALUADO' }}</span>
+                                                                'text-bg-no-evaluado': !s.evaluations.estado || s.evaluations.evaluationProyectId != idEvaluation,'text-bg-danger': (s.evaluations.evaluationProyectId == idEvaluation && s.evaluations.estado && getCategoryStatus(s.evaluations.estado) == 'NO CUMPLE'), 'text-bg-success': s.evaluations.evaluationProyectId == idEvaluation &&  s.evaluations.estado && getCategoryStatus(s.evaluations.estado) == 'CUMPLE', 'text-bg-warning': s.evaluations.evaluationProyectId == idEvaluation &&  s.evaluations.estado && getCategoryStatus(s.evaluations.estado) == 'CUMPLE PARCIALMENTE'}">{{s.evaluations.evaluationProyectId == idEvaluation && s.evaluations.estado ? s.evaluations.estado : 'NO EVALUADO' }}</span>
                                                         </div>
-                                                        <div class="col-lg-1 col text-center">
-                                                            <span 
-                                                            [style.cursor]="'pointer'" (click)="homologar(homoContent, evaluations.id)">
+                                                        <div class="col-lg-1 col text-center" *ngIf="s.proyectoId == project_id">
+                                                            <span [ngClass]="s.evaluations.evaluationProyectId == idEvaluation && s.evaluations.active ? 'text-success' : ''" 
+                                                            [style.cursor]="'pointer'" (click)="homologar(homoContent, s.evaluations)">
                                                             <i class="ri-git-merge-fill"></i>
                                                             </span>
                                                         </div>
