--- a/src/app/pages/dashboards/project-dashboard/project-evaluations/project-evaluations.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-evaluations/project-evaluations.component.html
@@ -125,7 +125,7 @@
                                                                         
                                                                         <div class="col-lg-1 col text-center">
                                                                             <span 
-                                                                            [style.cursor]="'pointer'" (click)="homologar(homoContent, evaluations.id)">
+                                                                            [style.cursor]="'pointer'" (click)="homologar(homoContent, evaluations.id, v.id)">
                                                                             <i class="ri-git-merge-fill"></i>
                                                                             </span>
                                                                         </div>
